Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105873

QMqttClient documentation does not include the constructor

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.11, 6.2.6, 6.4.0 RC1, 6.5.0 Beta1
    • 5.15, 6.2, 6.3
    • MQTT
    • None
    • 7289f85f3c (qt/qtmqtt/dev) 7289f85f3c (qt/tqtc-qtmqtt/dev) 8b02760ea6 (qt/qtmqtt/6.3) d6861a340a (qt/qtmqtt/6.4) 8b02760ea6 (qt/tqtc-qtmqtt/6.3) d6861a340a (qt/tqtc-qtmqtt/6.4) ea673b2e69 (qt/tqtc-qtmqtt/5.15) 63e284c6e7 (qt/tqtc-qtmqtt/6.2)
    • Da Vinci 61

      Please note that the Qt6 documentation omits the description of the QMqttClient constructor.

       

      [QMqttClient Class | Qt MQTT 6.3.1|https://doc.qt.io/qt-6/qmqttclient.html]

       

      same in 5.15 and 6.2 LTS versions

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paulwicking Paul Wicking
            thirdstrand Mitch Wihnkle
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes