Doc: Expose QMqttClient ctor docs

The documentation comment isn't a QDoc comment,
so the docs aren't generated.

Fixes: QTBUG-105873
Change-Id: I176ea1c7ed2460bbeb1700a4d74a81b439215306
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>
(cherry picked from commit 7289f85f3c003bdea414f3ffaf89268f7ee2459e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>